--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "node-fetch": "^3.1.0",
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
